--- a/style.css
+++ b/style.css
@@ -61,3 +61,12 @@ body {
     color: var(--cor-fraquissima);
     font-size: 12px;
 }
+
+.container__titulo {
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.container__imagem {
+    margin: 1em 0 2em 0;
+}
