--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     background-image: url("imagens/Dubladores.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
     text-align: center;
 }
 
@@ -69,4 +70,25 @@ body {
 
 .container__imagem {
     margin: 1em 0 2em 0;
+}
+
+.secundario {
+    grid-template-columns: 50% 50%;
+    justify-items: center;
+    align-items: center;
+}
+
+.secundario__imagem {
+    width: 80%;
+}
+
+.descricao__titulo {
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.descricao__texto {
+    font-size: 16px;
+    font-weight: 150;
+    color: var(--cor-fraca);
 }
